[sc-3146] New sign up flow (#454)
* Mark old signup and login flow component as such

* New signup page layout

* Signup by email

  - New user-container component (for the new layout, the old one has been marked with `old` prefix)
  - Call signup endpoint with username, email and password
  - New check your email page
  - Use logo icons from sistema instead of Pastanaga

* Signup using sso from Google or GitHub

* Fix inputs with external label in account and user profiles

* Use new user container on farewell component

fixing the background position issue it had

* Redirect to new onboarding page after signing up

* Creating account and kb + redirecting to resource list

* Fix and add unit tests

* Update login pages with new layout

  - Login page:
    - New layout
    - New sso buttons
    - Better error management
  - New layout + form improvements on:
     - recover component
     - reset component

* Cleanup replaced and unused components

  - delete `old-user-container`, `user-error`, `account` and `old-signup` components
  - refactor consent accordingly

* Improvements

  - don't show sso on login when oAuth flow
  - add description in onboarding setting-up step
  - fix tests

* Fix logo in 404 page

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -255,9 +255,11 @@
 	"language.tr": "Turc",
 	"link.create.error": "Error en carregar l'enllaç",
 	"login.access_request": "vol accedir al teu compte de Nuclia i poder: ",
+	"login.boarding_title": "Embarcament a Nuclia",
 	"login.check_email": "Comprova el teu correu!",
+	"login.check_email_details": "Feu clic a l'enllaç que acabeu de rebre a <strong>{{ email }}</strong> per finalitzar el vostre compte. Si no hi ha res a la vista... Comproveu la vostra carpeta de correu brossa 🙃!",
 	"login.company": "Empresa",
-	"login.continue_with": "Continua amb",
+	"login.continue_with": "Inicieu sessió amb {{provider}}",
 	"login.create_one": "Crea'n un!",
 	"login.description": "Coneix el què la teva empresa sap",
 	"login.email": "Correu electrònic",
@@ -273,6 +275,7 @@
 	"login.full_name": "Nom complert",
 	"login.gogetflaps": "Coneix-ne més i registra't!",
 	"login.have_account": "No tens un compte?",
+	"login.have_account_already": "Ja tens un compte?",
 	"login.join_expedition": "Uneix-te a l’expedició en menys d’un minut",
 	"login.local_user_already_exists": "Ja existeix un usuari amb aquest correu electrónic. Per entrar introdueix la teva contrasenya.",
 	"login.login": "Accedir",
@@ -280,15 +283,19 @@
 	"login.privacy_policy": "Política de privacitat",
 	"login.recover": "Recuperar contrasenya",
 	"login.recover_help": "Problemes amb la paraula de pas?",
+	"login.resend_email": "Torna a enviar el correu electrònic",
 	"login.scope.kbs_read": "Accedir a les teves caixes de coneixement",
 	"login.scope.kbs_write": "Modificar les teves caixes de coneixement",
+	"login.sign-up-with": "Registra't amb {{provider}}",
 	"login.signup": "Registra't!",
+	"login.subtitle": "Troba-ho tot.",
 	"login.terms_and_conditions": "Termes i Condicions",
 	"login.title": "Benvingut/da a Flaps",
 	"login.token_expired": "El token ha caducat",
 	"login.try_again": "Torna-ho a intentar o recupera la contrasenya.",
 	"login.user_registered_as_external_user": "Ja existeix un usuari amb aquest correu electrònic. Si us plau, intenta entrar amb el teu compte de Google.",
 	"login.validate_and_explore": "Verifica el compte i comença a explorar",
+	"login.wrong_email": "Correu electrònic incorrecte?",
 	"modal.create_link.input": "Escriu o enganxa l’enllaç",
 	"modal.create_link.multiple": "Múltiples",
 	"modal.create_link.textarea": "Enganxeu alguns enllaços (un per línia)",
@@ -304,6 +311,20 @@
 	"modal.upload.success": "Fitxer pujat correctament",
 	"modal.upload.title": "Puja els teus fitxers",
 	"modal.upload_folder": "Afegeix una carpeta",
+	"onboarding.account_creation": "Creació del compte...",
+	"onboarding.consent": "En utilitzar aquest producte, accepteu els <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Termes i condicions</a> i la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privadesa</a>.",
+	"onboarding.get_started": "Començar",
+	"onboarding.industry_label": "En quina indústria ets?",
+	"onboarding.industry_placeholder": "Trieu una indústria",
+	"onboarding.kb_creation": "Creació d'emmagatzematge...",
+	"onboarding.search_engine_label": "Estàs utilitzant actualment altres cercadors?",
+	"onboarding.search_engine_placeholder": "Estic una mica decebut amb...",
+	"onboarding.setting_up": "⏳ Estem configurant el teu compte",
+	"onboarding.setting_up_subtitle": "El vostre compte estarà llest en menys d'un minut!",
+	"onboarding.storage_zone": "Les teves dades seran allotjades a Europa. Si voleu que les vostres dades s'allotgin en un altre lloc, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">ompliu aquest formulari</a>.",
+	"onboarding.subtitle": "Un parell de preguntes ràpides i us posarem en marxa.",
+	"onboarding.title": "👋​ Benvinguts a Nuclia!",
+	"onboarding.updates": "Obteniu actualitzacions ocasionals sobre Nuclia",
 	"ontology.add_ontology": "Afegir etiquetes",
 	"ontology.customize_classification": "Personalitza la classificació.",
 	"ontology.delete_confirm_title": "Eliminar la classificació?",
@@ -347,10 +368,9 @@
 	"recover.recover": "Recuperar",
 	"recover.title": "Recupera la contrasenya",
 	"recover.verify": "Verifica el compte per canviar la contrasenya",
-	"reset.description": "Crea o modifica la teva contrasenya",
 	"reset.password": "Nova contrasenya",
 	"reset.password_reset": "S'ha restaurat la contrasenya",
-	"reset.title": "Crear contrasenya",
+	"reset.title": "Restablir la contrasenya",
 	"resource.add_labels": "Afegeix etiquetes",
 	"resource.add_labels_error": "S'ha produït un error en afegir etiquetes als recursos {{count}}",
 	"resource.add_labels_success": "S'han afegit correctament etiquetes a {{count}} recursos",
@@ -577,6 +597,7 @@
 	"upload.use_folder_as_labels.help": "La carpeta de primer nivell és el nom del conjunt d'etiquetes, les subcarpetes són etiquetes. Si les subcarpetes estan imbricades, els fitxers tindran diverses etiquetes. Les etiquetes es crearan automàticament si encara no estan definides al caixa de coneixement.",
 	"upload.use_folder_as_labels.label": "Utilitzeu noms de carpetes com a etiquetes",
 	"user.logout": "Sortir",
+	"validation.company-email": "Si us plau, utilitzeu un correu electrònic de l'empresa",
 	"validation.email": "Introdueix un correu electrònic vàlid",
 	"validation.language_required": "Selecciona un idioma",
 	"validation.name_required": "Introdueix el nom i cognoms",
