--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -297,9 +297,11 @@
 	"link.create.error": "Error when uploading the link",
 	"login.access_request": "wants to access Nuclia on your behalf and be able to:",
 	"login.agree": "I agree to Nuclia’s",
+	"login.boarding_title": "Boarding Nuclia",
 	"login.check_email": "Check your email!",
+	"login.check_email_details": "Click on the link you just received at <strong>{{ email }}</strong> to finalize your account. If nothing in sight… Check your spam folder 🙃!",
 	"login.company": "Company",
-	"login.continue_with": "Continue with",
+	"login.continue_with": "Log in with {{provider}}",
 	"login.create_one": "Create",
 	"login.description": "Know what your company knows",
 	"login.email": "Email",
@@ -315,6 +317,7 @@
 	"login.full_name": "Full name",
 	"login.gogetflaps": "Learn more & sign up!",
 	"login.have_account": "Don’t have an account?",
+	"login.have_account_already": "Already have an account?",
 	"login.join_expedition": "Build your AI-powered search in minutes",
 	"login.local_user_already_exists": "A user with this email already exists. To log in, please enter your password.",
 	"login.login": "Log in",
@@ -322,15 +325,19 @@
 	"login.privacy_policy": "Privacy Policy",
 	"login.recover": "Recover password",
 	"login.recover_help": "Problems logging in?",
+	"login.resend_email": "Resend the email",
 	"login.scope.kbs_read": "View your Knowledge boxes",
 	"login.scope.kbs_write": "Modify your Knowledge boxes",
+	"login.sign-up-with": "Sign up with {{provider}}",
 	"login.signup": "Sign Up",
+	"login.subtitle": "Find everything.",
 	"login.terms_and_conditions": "Terms & Conditions",
 	"login.title": "Welcome to Nuclia",
 	"login.token_expired": "Token has expired",
 	"login.try_again": "Please try again or reset your password below.",
 	"login.user_registered_as_external_user": "A user with this email already exists. Please sign in with your Google Account.",
 	"login.validate_and_explore": "Please, verify your account",
+	"login.wrong_email": "Wrong email?",
 	"modal.create_link.input": "Type or paste the link",
 	"modal.create_link.multiple": "Multiple",
 	"modal.create_link.textarea": "Paste some links (one per line)",
@@ -346,6 +353,20 @@
 	"modal.upload.success": "File uploaded successfully",
 	"modal.upload.title": "Upload your files",
 	"modal.upload_folder": "Add a folder",
+	"onboarding.account_creation": "Account creation…",
+	"onboarding.consent": "By using this product, you accept the <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Terms and Conditions</a> and <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Privacy Policy</a>.",
+	"onboarding.get_started": "Get started",
+	"onboarding.industry_label": "What industry are you in? ",
+	"onboarding.industry_placeholder": "Choose an industry",
+	"onboarding.kb_creation": "Storage creation…",
+	"onboarding.search_engine_label": "Are you currently using other search engines?",
+	"onboarding.search_engine_placeholder": "I'm a little disappointed with…",
+	"onboarding.setting_up": "⏳ ​ We’re setting your account up",
+	"onboarding.setting_up_subtitle": "Your account will be ready in less than a minute! ",
+	"onboarding.storage_zone": "Your data will be hosted in Europe. If you would like your data to be hosted elsewhere, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">fill this form</a>.",
+	"onboarding.subtitle": "A couple of quick questions, and we'll get you started.",
+	"onboarding.title": "👋​ Welcome to Nuclia!",
+	"onboarding.updates": "Get occasional updates about Nuclia",
 	"ontology.add_ontology": "Add label set",
 	"ontology.customize_classification": "Customize the classification.",
 	"ontology.delete_confirm_title": "Delete classification?",
@@ -393,10 +414,9 @@
 	"recover.recover": "Recover",
 	"recover.title": "Recover your password",
 	"recover.verify": "Check your email and use the provided link to change your password",
-	"reset.description": "Create or modify your password",
 	"reset.password": "New password",
 	"reset.password_reset": "Your password has been reset",
-	"reset.title": "Create password",
+	"reset.title": "Reset password",
 	"resource.add_labels": "Add labels",
 	"resource.add_labels_error": "An error occurred while adding labels on {{count}} resources",
 	"resource.add_labels_success": "Labels successfully added on {{count}} resources",
@@ -661,6 +681,7 @@
 	"upload.use_folder_as_labels.help": "First-level folder is the label set name, subfolders are labels. If subfolders are nested, files will get multiple labels. Labels will be created automatically if they are not defined in the knowledge box yet.",
 	"upload.use_folder_as_labels.label": "Use folder names as label names",
 	"user.logout": "Log out",
+	"validation.company-email": "Please use a company email",
 	"validation.email": "Enter a valid email",
 	"validation.language_required": "Select a language",
 	"validation.name_required": "Add your name and surnames",
