--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -255,9 +255,11 @@
 	"language.tr": "Turco",
 	"link.create.error": "Error al subir el enlace",
 	"login.access_request": "quiere acceder a tu cuenta de Nuclia y poder: ",
+	"login.boarding_title": "Embarque Nuclia",
 	"login.check_email": "!Revisa tu correo!",
+	"login.check_email_details": "Haga clic en el enlace que acaba de recibir en <strong>{{ email }}</strong> para finalizar su cuenta. Si no hay nada a la vista… ¡Revisa tu carpeta de spam 🙃!",
 	"login.company": "Empresa",
-	"login.continue_with": "Continua con",
+	"login.continue_with": "Inicie sesión con {{provider}}",
 	"login.create_one": "Créala!",
 	"login.description": "Conoce lo que tu empresa sabe",
 	"login.email": "Correo electrónico",
@@ -273,6 +275,7 @@
 	"login.full_name": "Nombre completo",
 	"login.gogetflaps": "Conoce más y registrate!",
 	"login.have_account": "¿No tienes una cuenta?",
+	"login.have_account_already": "¿Ya tienes una cuenta?",
 	"login.join_expedition": "Únete a la expedición en menos de un minuto",
 	"login.local_user_already_exists": "Ya existe un usuario con este correo electrónico. Para entrar introduce tu contraseña.",
 	"login.login": "Iniciar sesión",
@@ -280,15 +283,19 @@
 	"login.privacy_policy": "Política de privacidad",
 	"login.recover": "Recuperar contraseña",
 	"login.recover_help": "Problemas con la contraseña?",
+	"login.resend_email": "Vuelva a enviar el correo electrónico",
 	"login.scope.kbs_read": "Acceder a tus cajas de conocimiento",
 	"login.scope.kbs_write": "Modificar tus cajas de conocimiento",
+	"login.sign-up-with": "Regístrese con {{provider}}",
 	"login.signup": "Regístrate!",
+	"login.subtitle": "Encuentra todo.",
 	"login.terms_and_conditions": "Términos y Condiciones",
 	"login.title": "Bienvenido/a a Flaps",
 	"login.token_expired": "El token ha caducado",
 	"login.try_again": "Vuelva a intentarlo o recupera la contraseña.",
 	"login.user_registered_as_external_user": "Ya existe un usuario con ese correo electrónico. Por favor, trate de entrar con su cuenta de Google.",
 	"login.validate_and_explore": "Verifica la cuenta y empieza a explorar ",
+	"login.wrong_email": "Email incorrecto?",
 	"modal.create_link.input": "Escribe o pega el enlace",
 	"modal.create_link.multiple": "Múltiple",
 	"modal.create_link.textarea": "Pegue algunos enlaces (uno por línea)",
@@ -304,6 +311,20 @@
 	"modal.upload.success": "Archivo cargado con éxito",
 	"modal.upload.title": "Sube tus ficheros",
 	"modal.upload_folder": "Añade una carpeta",
+	"onboarding.account_creation": "Creación de cuenta…",
+	"onboarding.consent": "Al utilizar este producto, acepta los <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Términos y condiciones</a> y la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privacidad</a>.",
+	"onboarding.get_started": "Empezar",
+	"onboarding.industry_label": "En que industria estás?",
+	"onboarding.industry_placeholder": "Elige una industria",
+	"onboarding.kb_creation": "Creación de almacenamiento…",
+	"onboarding.search_engine_label": "¿Utiliza actualmente otros motores de búsqueda?",
+	"onboarding.search_engine_placeholder": "Estoy un poco decepcionado con…",
+	"onboarding.setting_up": "⏳ Estamos configurando tu cuenta",
+	"onboarding.setting_up_subtitle": "¡Tu cuenta estará lista en menos de un minuto!",
+	"onboarding.storage_zone": "Tus datos estarán alojados en Europa. Si desea que sus datos se alojen en otro lugar, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">complete este formulario</a>.",
+	"onboarding.subtitle": "Un par de preguntas rápidas y lo ayudaremos a comenzar.",
+	"onboarding.title": "👋​ ¡Bienvenidos a Nuclia!",
+	"onboarding.updates": "Recibe actualizaciones ocasionales sobre Nuclia",
 	"ontology.add_ontology": "Añadir etiquetas",
 	"ontology.customize_classification": "Personaliza la clasificación.",
 	"ontology.delete_confirm_title": "¿Eliminar clasificación?",
@@ -347,10 +368,9 @@
 	"recover.recover": "Recuperar",
 	"recover.title": "Recupera la contraseña",
 	"recover.verify": "Verifica la cuenta para cambiar la contraseña",
-	"reset.description": "Crea o modifica tu contraseña",
 	"reset.password": "Nueva contraseña",
 	"reset.password_reset": "Se ha restablecido la contraseña",
-	"reset.title": "Crea contraseña",
+	"reset.title": "Restablecer la contraseña",
 	"resource.add_labels": "Agregar etiquetas",
 	"resource.add_labels_error": "Se produjo un error al agregar etiquetas en {{count}} recursos",
 	"resource.add_labels_success": "Etiquetas añadidas correctamente en {{count}} recursos",
@@ -577,6 +597,7 @@
 	"upload.use_folder_as_labels.help": "La carpeta de primer nivel es el nombre del conjunto de etiquetas, las subcarpetas son etiquetas. Si las subcarpetas están anidadas, los archivos obtendrán varias etiquetas. Las etiquetas se crearán automáticamente si aún no están definidas en la caja de conocimiento.",
 	"upload.use_folder_as_labels.label": "Usar nombres de carpetas como etiquetas",
 	"user.logout": "Salir",
+	"validation.company-email": "Utilice un correo electrónico de la empresa",
 	"validation.email": "Introduce un correo electrónico válido",
 	"validation.language_required": "Selecciona un idioma",
 	"validation.name_required": "Añade tu nombre y apellidos",
