--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -313,6 +313,10 @@
 	"modal.upload_folder": "Afegeix una carpeta",
 	"onboarding.account_creation": "Creació del compte...",
 	"onboarding.consent": "En utilitzar aquest producte, accepteu els <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Termes i condicions</a> i la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privadesa</a>.",
+	"onboarding.dataset.description": "La manera més ràpida de començar i explorar com funciona Nuclia és importar un conjunt de dades de mostra. Podreu suprimir-lo fàcilment en qualsevol moment.",
+	"onboarding.dataset.import": "Importa dades",
+	"onboarding.dataset.title": "Comenceu a utilitzar Nuclia amb dades de mostra",
+	"onboarding.dataset.upload-links": "També podeu penjar els vostres propis <a href=\"#files\">fitxers</a>, <a href=\"#folder\">carpetes</a>, <a href=\"#link\">enllaços</a> o <a href=\"#csv\">afegir recursos des d'un CSV</a>. Tingueu en compte que processar, categoritzar i indexar el contingut pot trigar una mica.",
 	"onboarding.get_started": "Començar",
 	"onboarding.industry_label": "En quina indústria ets?",
 	"onboarding.industry_placeholder": "Trieu una indústria",
@@ -576,7 +580,7 @@
 	"upload.audios_detected": "Hem detectat arxius d’audio. Per a continuar, selecciona l’arxiu i el seu idioma.",
 	"upload.check_files": "Comprova l'estat dels fitxers",
 	"upload.completed": "completat",
-	"upload.csv_description": "Crea multiples recursos seleccionant un arxiu CSV amb 3 columnes: <code>Títol,Contingut,Format</code>",
+	"upload.csv_description": "Creeu diversos recursos seleccionant un fitxer CSV amb 3 columnes: <code>Títol, Cos, Format</code>",
 	"upload.csv_format": "en que la columna <code>Format</code> pot ser un d'aquests valors: <code>PLAIN MARKDOWN HTML RST</code>",
 	"upload.duplicated": "Fitxer duplicat",
 	"upload.error": "Error desconegut",
