Add delete dataset button on resource list page
  - display "delete dataset" button only when there are some sample resources in the kb
  - delete sample resources when clicking on the button
  - display toast message depending on success/error (success, partial success, error)
  - cleanup sample dataset on success

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -313,6 +313,11 @@
 	"modal.upload_folder": "Afegeix una carpeta",
 	"onboarding.account_creation": "Creació del compte...",
 	"onboarding.consent": "En utilitzar aquest producte, accepteu els <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Termes i condicions</a> i la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privadesa</a>.",
+	"onboarding.dataset.delete": "Suprimeix la mostra",
+	"onboarding.dataset.delete_failed": "No s'ha pogut suprimir el conjunt de dades de mostra",
+	"onboarding.dataset.delete_in_progress": "S'està suprimint el conjunt de dades de mostra",
+	"onboarding.dataset.delete_partially_successful": "S'ha suprimit parcialment el conjunt de dades de mostra (ha fallat la supressió de {{error}} recursos)",
+	"onboarding.dataset.delete_successful": "S'ha suprimit el conjunt de dades de mostra",
 	"onboarding.dataset.description": "La manera més ràpida de començar i explorar com funciona Nuclia és importar un conjunt de dades de mostra. Podreu suprimir-lo fàcilment en qualsevol moment.",
 	"onboarding.dataset.import": "Importa dades",
 	"onboarding.dataset.title": "Comenceu a utilitzar Nuclia amb dades de mostra",
