--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -355,6 +355,11 @@
 	"modal.upload_folder": "Add a folder",
 	"onboarding.account_creation": "Account creation…",
 	"onboarding.consent": "By using this product, you accept the <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Terms and Conditions</a> and <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Privacy Policy</a>.",
+	"onboarding.dataset.delete": "Delete sample dataset",
+	"onboarding.dataset.delete_failed": "Failed to delete sample dataset",
+	"onboarding.dataset.delete_in_progress": "Deleting sample dataset",
+	"onboarding.dataset.delete_partially_successful": "Sample dataset partially deleted (deletion of {{error}} resources failed)",
+	"onboarding.dataset.delete_successful": "Sample dataset deleted",
 	"onboarding.dataset.description": "The fastest way to get started and explore how Nuclia works is to import a sample dataset. You'll be able to easily delete it at any time.",
 	"onboarding.dataset.import": "Import data",
 	"onboarding.dataset.title": "Start using Nuclia with sample data",
