--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -313,6 +313,11 @@
 	"modal.upload_folder": "Añade una carpeta",
 	"onboarding.account_creation": "Creación de cuenta…",
 	"onboarding.consent": "Al utilizar este producto, acepta los <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Términos y condiciones</a> y la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privacidad</a>.",
+	"onboarding.dataset.delete": "Eliminar muestra",
+	"onboarding.dataset.delete_failed": "Error al eliminar el conjunto de datos de muestra",
+	"onboarding.dataset.delete_in_progress": "Eliminación de un conjunto de datos de muestra",
+	"onboarding.dataset.delete_partially_successful": "Conjunto de datos de muestra eliminado parcialmente (falló la eliminación de {{error}} recursos)",
+	"onboarding.dataset.delete_successful": "Conjunto de datos de muestra eliminado",
 	"onboarding.dataset.description": "La forma más rápida de comenzar y explorar cómo funciona Nuclia es importar un conjunto de datos de muestra. Podrás eliminarlo fácilmente en cualquier momento.",
 	"onboarding.dataset.import": "Datos de importacion",
 	"onboarding.dataset.title": "Comience a usar Nuclia con datos de muestra",
