--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -459,8 +459,10 @@
 	"resource.entities.time": "Time",
 	"resource.entities.title": "Resource insights",
 	"resource.entities.work_of_art": "Art",
+	"resource.failed_resources_popover": "Processing failed files",
 	"resource.file": "File",
 	"resource.link": "Link",
+	"resource.pending_resources_popover": "Files pending to be processed",
 	"resource.processed_resources": "Processed resources",
 	"resource.profile": "Profile",
 	"resource.resource_page_number": "{{num}} per page",
