[sc-3343] Onboarding import dataset (#459)
* Fix magic step layout (signup)

* Import dataset page

  - child route under resources
  - description with links allowing to upload files/folder/links/csv
  - redirect to resources list page after uploading or importing dataset
  - dropdown with sample datasets calling `/import` endpoint when clicking on import data button

* Add delete dataset button on resource list page

  - display "delete dataset" button only when there are some sample resources in the kb
  - delete sample resources when clicking on the button
  - display toast message depending on success/error (success, partial success, error)
  - cleanup sample dataset on success

* Don't display "Add label" button if there is no labelset

* Don't navigate to resource list if canceling upload

* Display a toast when dataset import fails

  - Replace ToastService by SisToastService everywhere

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -355,6 +355,16 @@
 	"modal.upload_folder": "Add a folder",
 	"onboarding.account_creation": "Account creation…",
 	"onboarding.consent": "By using this product, you accept the <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Terms and Conditions</a> and <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Privacy Policy</a>.",
+	"onboarding.dataset.delete": "Delete sample dataset",
+	"onboarding.dataset.delete_failed": "Failed to delete sample dataset",
+	"onboarding.dataset.delete_in_progress": "Deleting sample dataset",
+	"onboarding.dataset.delete_partially_successful": "Sample dataset partially deleted (deletion of {{error}} resources failed)",
+	"onboarding.dataset.delete_successful": "Sample dataset deleted",
+	"onboarding.dataset.description": "The fastest way to get started and explore how Nuclia works is to import a sample dataset. You'll be able to easily delete it at any time.",
+	"onboarding.dataset.import": "Import data",
+	"onboarding.dataset.import_failed": "Sample dataset import failed",
+	"onboarding.dataset.title": "Start using Nuclia with sample data",
+	"onboarding.dataset.upload-links": "You can also upload your own <a href=\"#files\">files</a>, <a href=\"#folder\">folders</a>, <a href=\"#link\">links</a> or <a href=\"#csv\">add resources from a CSV</a>. Be aware that processing, categorizing and indexing the content can take some time.",
 	"onboarding.get_started": "Get started",
 	"onboarding.industry_label": "What industry are you in? ",
 	"onboarding.industry_placeholder": "Choose an industry",
@@ -658,7 +668,7 @@
 	"upload.audios_detected": "We detected audio files. To continue, select the file and its language.",
 	"upload.check_files": "Check file status",
 	"upload.completed": "completed",
-	"upload.csv_description": "Create multiple resource by selecting a CSV file with 3 columns: <code>Title,Body,Format</code>",
+	"upload.csv_description": "Create multiple resources by selecting a CSV file with 3 columns: <code>Title, Body, Format</code>",
 	"upload.csv_format": "where <code>Format</code> column must be one of theses values: <code>PLAIN MARKDOWN HTML RST</code>",
 	"upload.duplicated": "Duplicated file",
 	"upload.error": "Unknown error",
