--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -313,6 +313,16 @@
 	"modal.upload_folder": "Añade una carpeta",
 	"onboarding.account_creation": "Creación de cuenta…",
 	"onboarding.consent": "Al utilizar este producto, acepta los <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Términos y condiciones</a> y la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privacidad</a>.",
+	"onboarding.dataset.delete": "Eliminar muestra",
+	"onboarding.dataset.delete_failed": "Error al eliminar el conjunto de datos de muestra",
+	"onboarding.dataset.delete_in_progress": "Eliminación de un conjunto de datos de muestra",
+	"onboarding.dataset.delete_partially_successful": "Conjunto de datos de muestra eliminado parcialmente (falló la eliminación de {{error}} recursos)",
+	"onboarding.dataset.delete_successful": "Conjunto de datos de muestra eliminado",
+	"onboarding.dataset.description": "La forma más rápida de comenzar y explorar cómo funciona Nuclia es importar un conjunto de datos de muestra. Podrás eliminarlo fácilmente en cualquier momento.",
+	"onboarding.dataset.import": "Datos de importacion",
+	"onboarding.dataset.import_failed": "La importación del conjunto de datos de muestra falló",
+	"onboarding.dataset.title": "Comience a usar Nuclia con datos de muestra",
+	"onboarding.dataset.upload-links": "También puede cargar sus propios <a href=\"#files\">archivos</a>, <a href=\"#folder\">carpetas</a>, <a href=\"#link\">enlaces</a> o <a href=\"#csv\">agregar recursos desde un CSV</a>. Tenga en cuenta que procesar, categorizar e indexar el contenido puede llevar algún tiempo.",
 	"onboarding.get_started": "Empezar",
 	"onboarding.industry_label": "En que industria estás?",
 	"onboarding.industry_placeholder": "Elige una industria",
@@ -576,7 +586,7 @@
 	"upload.audios_detected": "Hemos detectado ficheros  de audio. Para continuar, selecciona el archivo y su idioma.",
 	"upload.check_files": "Comprueba el estado de los ficheros",
 	"upload.completed": "completado",
-	"upload.csv_description": "Crea multiples recursos seleccionando un archivo CSV con 3 columnas: <code>Título,Contenido,Formato</code>",
+	"upload.csv_description": "Cree múltiples recursos seleccionando un archivo CSV con 3 columnas: <code>Título, Cuerpo, Formato</code>",
 	"upload.csv_format": "en que la columna <code>Formato</code> puede ser uno de estos valores:\n<code>PLAIN MARKDOWN HTML RST</code>",
 	"upload.duplicated": "Fichero duplicado",
 	"upload.error": "Error desconocido",
