Remove Flaps from our translations

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -215,7 +215,7 @@
 	"generic.showing": "Mostrant",
 	"generic.skip": "Ometre",
 	"generic.slug": "Slug",
-	"generic.suggeriment": "Suggeriments a Flaps",
+	"generic.suggeriment": "Enviar suggeriment",
 	"generic.suggestions": "Suggeriments",
 	"generic.switch_account": "Canviar de compte",
 	"generic.tags": "Etiquetes",
@@ -290,7 +290,7 @@
 	"login.signup": "Registra't!",
 	"login.subtitle": "Troba-ho tot.",
 	"login.terms_and_conditions": "Termes i Condicions",
-	"login.title": "Benvingut/da a Flaps",
+	"login.title": "Benvinguts a Nuclia",
 	"login.token_expired": "El token ha caducat",
 	"login.try_again": "Torna-ho a intentar o recupera la contrasenya.",
 	"login.user_registered_as_external_user": "Ja existeix un usuari amb aquest correu electrònic. Si us plau, intenta entrar amb el teu compte de Google.",
@@ -524,7 +524,7 @@
 	"stash.side.list": "Llistat recursos",
 	"stash.side.manage": "Gestiona recursos",
 	"stash.side.page": "Afegir pàgina",
-	"stash.side.poweredby": "Fet amb la potència de Flaps",
+	"stash.side.poweredby": "Desenvolupat per Nuclia",
 	"stash.side.results": "Tot el contingut",
 	"stash.side.settings": "Preferències",
 	"stash.side.sharing": "Compartir",
