--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -215,7 +215,7 @@
 	"generic.showing": "Mostrando",
 	"generic.skip": "Omitir",
 	"generic.slug": "Slug",
-	"generic.suggeriment": "Sugerencias a Flaps",
+	"generic.suggeriment": "Enviar sugerencia",
 	"generic.suggestions": "Sugerencias",
 	"generic.switch_account": "Cambia de cuenta",
 	"generic.tags": "Etiquetas",
@@ -290,7 +290,7 @@
 	"login.signup": "Regístrate!",
 	"login.subtitle": "Encuentra todo.",
 	"login.terms_and_conditions": "Términos y Condiciones",
-	"login.title": "Bienvenido/a a Flaps",
+	"login.title": "Bienvenidos a Nuclia",
 	"login.token_expired": "El token ha caducado",
 	"login.try_again": "Vuelva a intentarlo o recupera la contraseña.",
 	"login.user_registered_as_external_user": "Ya existe un usuario con ese correo electrónico. Por favor, trate de entrar con su cuenta de Google.",
@@ -524,7 +524,7 @@
 	"stash.side.list": "Listado de recursos",
 	"stash.side.manage": "Gestiona recursos",
 	"stash.side.page": "Añadir página",
-	"stash.side.poweredby": "Con la potencia de Flaps",
+	"stash.side.poweredby": "Desarrollado por Nuclia",
 	"stash.side.results": "Todos los contenidos",
 	"stash.side.settings": "Preferencias",
 	"stash.side.sharing": "Compartir",
