Add status column in pending view + improve popover style

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -426,7 +426,8 @@
 	"resource.status-help.pending": "Expedients pendents de processar",
 	"resource.status_error": "Error en processar",
 	"resource.status_loading": "S'està carregant l'estat...",
-	"resource.status_pending": "{{count}} recursos pendents de processar",
+	"resource.status_next": "A continuació es processarà",
+	"resource.status_pending": "Es processarà després de {{count}} recursos",
 	"resource.status_processed": "Processament completat",
 	"resource.status_processing": "Processament en curs",
 	"resource.status_unknown": "Encara no hi ha cap estat disponible per a aquesta cua de processament del compte",
