--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -474,7 +474,8 @@
 	"resource.status-help.pending": "Files pending to be processed",
 	"resource.status_error": "Error while processing",
 	"resource.status_loading": "Loading status…",
-	"resource.status_pending": "{{count}} resources pending to be processed",
+	"resource.status_next": "Will be processed next",
+	"resource.status_pending": "Will be processed after {{count}} resources",
 	"resource.status_processed": "Processing completed",
 	"resource.status_processing": "Processing in progress",
 	"resource.status_unknown": "No status available for this account processing queue yet",
