--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -426,7 +426,8 @@
 	"resource.status-help.pending": "Expedientes pendientes de tramitar",
 	"resource.status_error": "Error al procesar",
 	"resource.status_loading": "Cargando estado…",
-	"resource.status_pending": "{{count}} recursos pendientes de procesar",
+	"resource.status_next": "Será procesado a continuación",
+	"resource.status_pending": "Se procesará después de {{count}} recursos",
 	"resource.status_processed": "Procesamiento completado",
 	"resource.status_processing": "Procesando en progreso",
 	"resource.status_unknown": "Aún no hay estado disponible para la cola de procesamiento de esta cuenta",
