--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -413,6 +413,9 @@
 	"resource.entities.time": "Tiempo",
 	"resource.entities.title": "Información clave del recurso",
 	"resource.entities.work_of_art": "Obras",
+	"resource.failed_resources_popover": "Procesamiento de archivos fallidos",
+	"resource.pending_resources_popover": "Expedientes pendientes de tramitar",
+	"resource.processed_resources": "Recursos procesados",
 	"resource.profile": "Perfil",
 	"resource.resource_page_number": "{{num}} por página",
 	"resource.search.in-resource": "en recurso",
@@ -423,7 +426,8 @@
 	"resource.status-help.pending": "Expedientes pendientes de tramitar",
 	"resource.status_error": "Error al procesar",
 	"resource.status_loading": "Cargando estado…",
-	"resource.status_pending": "{{count}} recursos pendientes de procesar",
+	"resource.status_next": "Será procesado a continuación",
+	"resource.status_pending": "Se procesará después de {{count}} recursos",
 	"resource.status_processed": "Procesamiento completado",
 	"resource.status_processing": "Procesando en progreso",
 	"resource.status_unknown": "Aún no hay estado disponible para la cola de procesamiento de esta cuenta",
