Revert [sc-3211] No more status column

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -413,9 +413,6 @@
 	"resource.entities.time": "Temps",
 	"resource.entities.title": "Insights del recurs",
 	"resource.entities.work_of_art": "Obres",
-	"resource.failed_resources_popover": "El processament dels fitxers ha fallat",
-	"resource.pending_resources_popover": "Expedients pendents de processar",
-	"resource.processed_resources": "Recursos processats",
 	"resource.profile": "Perfil",
 	"resource.resource_page_number": "{{num}} per pàgina",
 	"resource.search.in-resource": "en recurs",
@@ -426,8 +423,7 @@
 	"resource.status-help.pending": "Expedients pendents de processar",
 	"resource.status_error": "Error en processar",
 	"resource.status_loading": "S'està carregant l'estat...",
-	"resource.status_next": "A continuació es processarà",
-	"resource.status_pending": "Es processarà després de {{count}} recursos",
+	"resource.status_pending": "{{count}} recursos pendents de processar",
 	"resource.status_processed": "Processament completat",
 	"resource.status_processing": "Processament en curs",
 	"resource.status_unknown": "Encara no hi ha cap estat disponible per a aquesta cua de processament del compte",
