--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -459,11 +459,8 @@
 	"resource.entities.time": "Time",
 	"resource.entities.title": "Resource insights",
 	"resource.entities.work_of_art": "Art",
-	"resource.failed_resources_popover": "Processing failed files",
 	"resource.file": "File",
 	"resource.link": "Link",
-	"resource.pending_resources_popover": "Files pending to be processed",
-	"resource.processed_resources": "Processed resources",
 	"resource.profile": "Profile",
 	"resource.resource_page_number": "{{num}} per page",
 	"resource.search.in-resource": "in resource",
@@ -474,8 +471,7 @@
 	"resource.status-help.pending": "Files pending to be processed",
 	"resource.status_error": "Error while processing",
 	"resource.status_loading": "Loading status…",
-	"resource.status_next": "Will be processed next",
-	"resource.status_pending": "Will be processed after {{count}} resources",
+	"resource.status_pending": "{{count}} resources pending to be processed",
 	"resource.status_processed": "Processing completed",
 	"resource.status_processing": "Processing in progress",
 	"resource.status_unknown": "No status available for this account processing queue yet",
